<resources>
    <string name="app_name">Leaving Cert Calculator</string>
    <string name="action_settings">Settings</string>
    <string-array name="Level">
        <item>Select Grade</item>
        <item>Distinction</item>
        <item>Merit</item>
        <item>Pass</item>
    </string-array>
    <string-array name="Grade">
        <item>Select Grade</item>
        <item>A1</item>
        <item>A2</item>
        <item>B1</item>
        <item>B2</item>
        <item>B3</item>
        <item>C1</item>
        <item>C2</item>
        <item>C3</item>
        <item>D1</item>
        <item>D2</item>
        <item>D3</item>
    </string-array>
    <string-array name="Subjects">
        <item>Select Subject</item>
        <item>Accounting</item>
        <item>Agri Economics</item>
        <item>Agri Science</item>
        <item>Ancient Greek</item>
        <item>Applied Maths</item>
        <item>Arabic</item>
        <item>Art</item>
        <item>Biology</item>
        <item>Bulgarian</item>
        <item>Business</item>
        <item>Chemistry</item>
        <item>Classical Studies</item>
        <item>Con Studies</item>
        <item>Croatian</item>
        <item>Czech</item>
        <item>Danish</item>
        <item>D&amp;CG</item>
        <item>Dutch</item>
        <item>Economics</item>
        <item>Engineering</item>
        <item>English</item>
        <item>Estrnian</item>
        <item>Finnish</item>
        <item>French</item>
        <item>Geography</item>
        <item>German</item>
        <item>Hebrew Studies</item>
        <item>History</item>
        <item>Home Economics</item>
        <item>Hungarian</item>
        <item>Irish</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Latin</item>
        <item>Latvian</item>
        <item>L.C.V.P</item>
        <item>Lithuanian</item>
        <item>Mathematics</item>
        <item>Modern Greek</item>
        <item>Music</item>
        <item>Physics</item>
        <item>Physics &amp; Chemistry</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Religious Edu</item>
        <item>Romanian</item>
        <item>Russian</item>
        <item>Slovakian</item>
        <item>Spanish</item>
        <item>Swedish</item>
        <item>Technology</item>
    </string-array>
    <string name="title_activity_level">Level Activity</string>
    <string name="title_activity_grade">Grade Activity</string>
    <string name="title_activity_result">Result Activity</string>
    <string name="tvSubInfo">Enter Top 6 Subjects</string>
    <string name="btnConSub">Confirm</string>
    <string name="btnConLevel">Confirm</string>
    <string name="tvGraInfo">Enter Grade</string>
    <string name="tvSubG1">1. Subject</string>
    <string name="tvSubG2">2. Subject</string>
    <string name="tvSubG3">3. Subject</string>
    <string name="tvSubG4">4. Subject</string>
    <string name="tvSubG5">5. Subject</string>
    <string name="tvSubG6">6. Subject</string>
    <string name="btnConG">Confirm</string>
    <string name="textView">Enter Subject Level</string>
    <string name="btnLevel">Level</string>
    <string name="tvResultInfo">Result</string>
    <string name="tvResult">0</string>
    <string name="tvGrade">----</string>
    <string name="btnReset">Reset</string>
    <string name="Higher">Higher</string>
    <string name="Ord">Ord</string>
    <string name="Found">Found</string>
</resources>
