<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="iedalyo25.dcu.computing.leavingcertcalculater.LevelActivity"
    tools:showIn="@layout/activity_level"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textView"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="1"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tvSubG1"
            android:id="@+id/tvSub1"
            android:layout_weight="1.00"
            android:gravity="start|center"
            android:paddingStart="5sp"
            android:paddingLeft="5sp"
            android:paddingEnd="5sp"
            android:textSize="20sp" />

        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/btnLevel"
            android:id="@+id/btnLevel1" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="1" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tvSubG2"
            android:id="@+id/tvSub2"
            android:layout_weight="1.00"
            android:textSize="20sp"
            android:paddingStart="5sp"
            android:paddingLeft="5sp"
            android:paddingEnd="5sp"
            android:gravity="start|center"/>

        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/btnLevel"
            android:id="@+id/btnLevel2"
            android:onClick="onClick"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="1" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tvSubG3"
            android:id="@+id/tvSub3"
            android:layout_weight="1.00"
            android:textSize="20sp"
            android:gravity="start|center"
            android:paddingStart="5sp"
            android:paddingLeft="5sp"
            android:paddingEnd="5sp"/>

        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/btnLevel"
            android:id="@+id/btnLevel3"
            android:onClick="onClick"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="1" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tvSubG4"
            android:id="@+id/tvSub4"
            android:layout_weight="1.00"
            android:textSize="20sp"
            android:gravity="start|center"
            android:paddingStart="5sp"
            android:paddingLeft="5sp"
            android:paddingEnd="5sp" />

        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/btnLevel"
            android:id="@+id/btnLevel4"
            android:onClick="onClick"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="1" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tvSubG5"
            android:id="@+id/tvSub5"
            android:layout_weight="1.00"
            android:textSize="20sp"
            android:gravity="start|center"
            android:paddingStart="5sp"
            android:paddingLeft="5sp"
            android:paddingEnd="5sp" />

        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/btnLevel"
            android:id="@+id/btnLevel5"
            android:onClick="onClick"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="1" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tvSubG6"
            android:id="@+id/tvSub6"
            android:layout_weight="1.00"
            android:textSize="20sp"
            android:gravity="start|center"
            android:paddingStart="5sp"
            android:paddingLeft="5sp"
            android:paddingEnd="5sp" />

        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/btnLevel"
            android:id="@+id/btnLevel6"
            android:onClick="onClick"/>
    </TableRow>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btnConLevel"
        android:id="@+id/btnConLevel"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:onClick="onClick"/>

</LinearLayout>
