<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="iedalyo25.dcu.computing.leavingcertcalculater.ResultActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_result">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tvResult"
            android:id="@+id/tvResult"
            android:gravity="center"
            android:layout_marginTop="10dp"
        android:textSize="50sp" />

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tvGrade"
                android:id="@+id/tvGrade1"
                android:gravity="end"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tvSubG1"
                android:id="@+id/tvSub1"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tvGrade"
                android:id="@+id/tvLevel1"
                android:gravity="end"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tvGrade"
                android:id="@+id/tvGrade2"
                android:gravity="end"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20sp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tvSubG2"
                android:id="@+id/tvSub2"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tvGrade"
                android:id="@+id/tvLevel2"
                android:gravity="end"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tvGrade"
                android:id="@+id/tvGrade3"
                android:gravity="end"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20sp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tvSubG3"
                android:id="@+id/tvSub3"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tvGrade"
                android:id="@+id/tvLevel3"
                android:gravity="end"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tvGrade"
                android:id="@+id/tvGrade4"
                android:gravity="end"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20sp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tvSubG4"
                android:id="@+id/tvSub4"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tvGrade"
                android:id="@+id/tvLevel4"
                android:gravity="end"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tvGrade"
                android:id="@+id/tvGrade5"
                android:gravity="end"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20sp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tvSubG5"
                android:id="@+id/tvSub5"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tvGrade"
                android:id="@+id/tvLevel5"
                android:gravity="end"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tvGrade"
                android:id="@+id/tvGrade6"
                android:gravity="end"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20sp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tvSubG6"
                android:id="@+id/tvSub6"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tvGrade"
                android:id="@+id/tvLevel6"
                android:gravity="end"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/btnReset"
                android:id="@+id/btnReset"
                android:layout_gravity="center_horizontal"
                android:textSize="30sp"
                android:onClick="onClick"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>